<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectedLocationContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selected_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selected_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_background"
            android:padding="10dp"
            android:text="@string/selectedAddress"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_add_location_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/selected_location_title"
            app:layout_constraintEnd_toEndOf="@id/selected_location_title"
            app:layout_constraintTop_toTopOf="@+id/selected_location_title" />

        <TextView
            android:id="@+id/check_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/firstLocation"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_location_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/check_no"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dialog_button_background"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/selected_location_layout"
        app:layout_constraintEnd_toStartOf="@+id/check_okey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_location_layout" />

    <Button
        android:id="@+id/check_okey"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/dialog_button_background"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/selected_location_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_no"
        app:layout_constraintTop_toBottomOf="@id/selected_location_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>